--- a/cardapio.html
+++ b/cardapio.html
@@ -17,42 +17,42 @@
             <li><a href="sobre.html">Sobre Nós</a></li>
             <li><a href="formulario.html">Contato</a></li>
             <li><a href="tabela.html">Horários</a></li>
-            <li><a href="carrinho.html">Carrinho</a></li>
+            <li><a href="reserva.html">Reserva</a></li>
         </ul>
     </header>
     <h1>Cardápio</h1>
     <div class="cardapio">
         <div class="item">
-            <img src="imagens/cafe1.jpg" alt="Café Espresso">
+            <img src="imagensCafe/cafe1.jpg" alt="Café Espresso">
             <h2>Café Espresso</h2>
-            <p>R$ 5,00</p>
-            <input type="number" name="idProduto" value="1" min="1" max="10">
-            <button type="button" onclick="adicionarAoCarrinho(this)">Adicionar ao carrinho</button>
+            <p id="valor-produto">R$ 5,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
 
         <div class="item">
-            <img src="imagens/bolo1.jpg" alt="Bolo de Chocolate">
+            <img src="imagensCafe/bolo1.jpg" alt="Bolo de Chocolate">
             <h2>Bolo de Chocolate</h2>
-            <p>R$ 7,00</p>
-            <input type="number" name="idProduto" value="1" min="1" max="10">
-            <button type="button" onclick="adicionarAoCarrinho(this)">Adicionar ao carrinho</button>
+            <p id="valor-produto">R$ 7,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
         <div class="item">
-            <img src="imagens/sanduiche1.jpg" alt="Sanduíche de Frango">
+            <img src="imagensCafe/sanduiche1.jpg" alt="Sanduíche de Frango">
             <h2>Sanduíche de Frango</h2>
-            <p>R$ 9,00</p>
-            <input type="number" name="idProduto" value="1" min="1" max="10">
-            <button type="button" onclick="adicionarAoCarrinho(this)">Adicionar ao carrinho</button>
+            <p id="valor-produto">R$ 9,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
         <div class="item">
-            <img src="imagens/sorvete1.jpg" alt="Sorvete de Baunilha">
+            <img src="imagensCafe/sorvete1.jpg" alt="Sorvete de Baunilha">
             <h2>Sorvete de Baunilha</h2>
-            <p>R$ 6,00</p>
-            <input type="number" name="idProduto" value="1" min="1" max="10">
-            <button type="button" onclick="adicionarAoCarrinho(this)">Adicionar ao carrinho</button>
+            <p id="valor-produto">R$ 6,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
         <div class="cardapio"></div>
@@ -62,7 +62,7 @@
         <div class="footer-content">
             <div class="contact-info">
                 <h3>Contato</h3>
-                <p>Telefone: (123) 456-7890</p>
+                <p>Telefone: (12) 3456-7890</p>
                 <p>Email: contato@coffeeshopmachado.com</p>
                 <p>Endereço: Rua da Cafeteria, 123</p>
             </div>
@@ -73,5 +73,6 @@
         </div>
     </footer>
 </body>
+<script src="/adicionar_carrinho.js"></script>
 
 </html>
