--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
             <li><a href="sobre.html">Sobre Nós</a></li>
             <li><a href="formulario.html">Contato</a></li>
             <li><a href="tabela.html">Horários</a></li>
-            <li><a href="carrinho.html">Carrinho</a></li>
+            <li><a href="reserva.html">Reserva</a></li>
         </ul>
     </header>
 
