--- a/cardapio.html
+++ b/cardapio.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio - Cafeteria Delícia</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/selecionar_produto.js"></script>
+    <!--  <script src="js/selecionar_produto.js"></script> -->
+
 </head>
 
 <body class="cardapio-body">
@@ -20,11 +21,11 @@
             <li><a href="reserva.html">Reserva</a></li>
         </ul>
     </header>
-    <h1>Cardápio</h1>
+    <h1>Cardápio Simples</h1>
     <div class="cardapio">
         <div class="item">
-            <img src="imagensCafe/cafe1.jpg" alt="Café Espresso">
-            <h2>Café Espresso</h2>
+            <img src="imagens/cafe-3.jpg" alt="Café Espresso">
+            <h2 class="cardapio-h2">Café Espresso</h2>
             <p id="valor-produto">R$ 5,00</p>
             <input type="number" name="idProduto" min="1" max="10"><br>
             <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
@@ -32,31 +33,83 @@
         </div>
 
         <div class="item">
-            <img src="imagensCafe/bolo1.jpg" alt="Bolo de Chocolate">
-            <h2>Bolo de Chocolate</h2>
+            <img src="imagens/doce-1.jpg" alt="Bolo de Chocolate">
+            <h2 class="cardapio-h2">Mini Bolo</h2>
             <p id="valor-produto">R$ 7,00</p>
             <input type="number" name="idProduto" min="1" max="10"><br>
             <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
+
         <div class="item">
-            <img src="imagensCafe/sanduiche1.jpg" alt="Sanduíche de Frango">
-            <h2>Sanduíche de Frango</h2>
+            <img src="imagens/lanche1.jpg" alt="Sanduíche de Frango">
+            <h2 class="cardapio-h2">Sanduíche de Frango</h2>
             <p id="valor-produto">R$ 9,00</p>
             <input type="number" name="idProduto" min="1" max="10"><br>
             <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
         <div class="item">
-            <img src="imagensCafe/sorvete1.jpg" alt="Sorvete de Baunilha">
-            <h2>Sorvete de Baunilha</h2>
+            <img src="imagens/lanche3.jpg" alt="Sorvete de Baunilha">
+            <h2 class="cardapio-h2">Croissant + Café </h2>
             <p id="valor-produto">R$ 6,00</p>
             <input type="number" name="idProduto" min="1" max="10"><br>
             <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
             <p class="preco">R$ 0,00</p>
         </div>
-        <div class="cardapio"></div>
-        <div class="total"></div>
+    </div>
+    <h1>Cardápio Gourmet</h1>
+    <div class="cardapio">
+
+        <div class="item">
+            <img src="imagens/lanche2.jpg" alt="lanche1">
+            <h2 class="cardapio-h2">Frome com Mel</h2>
+            <p id="valor-produto">R$ 18,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
+            <p class="preco">R$ 0,00</p>
+        </div>
+
+        <div class="item">
+            <img src="imagens/doce-3.jpg" alt="Bolo de Chocolate">
+            <h2 class="cardapio-h2">Bolo de Pistache</h2>
+            <p id="valor-produto">R$ 17,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
+            <p class="preco">R$ 0,00</p>
+        </div>
+
+        <div class="item">
+            <img src="imagens/cafe-5.jpg" alt="Sanduíche de Frango">
+            <h2 class="cardapio-h2">Capuccino Escocês</h2>
+            <p id="valor-produto">R$ 19,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
+            <p class="preco">R$ 0,00</p>
+        </div>
+        <div class="item">
+            <img src="imagens/cafe-7.jpg" alt="Sorvete de Baunilha">
+            <h2 class="cardapio-h2">Capuccino</h2>
+            <p id="valor-produto">R$ 16,00</p>
+            <input type="number" name="idProduto" min="1" max="10"><br>
+            <button type="button" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
+            <p class="preco">R$ 0,00</p>
+        </div>
+
+    </div>
+    <h1>Verifique seu carrinho</h1><br>
+    <div class="carrinho">
+        <h3>Carrinho</h3>
+        <ul>
+            <li class="item" v-for="item in carrinho.itens">
+                <div class="id">ID Carrinho: 1</div><br>
+                <div class="quantidade">Quantidade itens: 0</div><br>
+                <div class="preco">Total R$</div>
+                <p class="carrinho-">R$ 0,00</p><br>
+                <button type="button">Fechar Compra</button>
+            </li>
+        </ul>
+
     </div>
     <footer>
         <div class="footer-content">
@@ -73,6 +126,6 @@
         </div>
     </footer>
 </body>
-<script src="/adicionar_carrinho.js"></script>
+<script src="adicionar_carrinho.js"></script>
 
 </html>
